--- a/client/room.html
+++ b/client/room.html
@@ -337,7 +337,8 @@
         </div>
         <div class="details">
           <h1 data-showfor="similarName">Similar to: <span data-field="similarName"></span><span data-showfor="year"> (<span data-field="year"></span>)</span></h1>
-          <div data-showfor="similarAwards"><i class="material-icons">military_tech</i> <span data-field="similarAwards"></span></div>
+          <div data-showfor="similarAwards" class="hideForEdit"><i class="material-icons">emoji_events</i> <span data-field="similarAwards"></span></div>
+          <div class="onlyForEdit"><i class="material-icons">emoji_events</i> Awards: <span data-field="similarAwards"></span></div>
           <div data-showfor="bgg" class="hideForEdit"><i class="material-icons">info</i> <a data-field="bgg" data-target="href">Game details on <i class="material-icons intext">launch</i> <span id="similarDetailsDomain"></span></a></div>
           <div class="onlyForEdit"><i class="material-icons">info</i> Game details link: <span data-field="bgg"></span></div>
           <div data-showfor="rules" class="hideForEdit"><i class="material-icons">auto_stories</i> <a data-field="rules" data-target="href">Rules overview on <i class="material-icons intext">launch</i> <span id="similarRulesDomain"></span></a></div>
