better edit placeholder for empty game description

--- a/client/room.html
+++ b/client/room.html
@@ -302,7 +302,7 @@
           <div data-showfor="time"><i class="material-icons">schedule</i> Time: <span data-field="time"></span> minutes</div>
           <div data-showfor="mode"><i class="material-icons">groups</i> Mode: <span data-field="mode"></span></div>
           <div data-showfor="skill"><i class="material-icons">psychology</i> Skill: <span data-field="skill"></span></div>
-          <p data-field="description"></p>
+          <p data-field="description" data-placeholder="&lt;empty game description&gt;"></p>
         </div>
       </div>
       <template id="template-variantslist-entry" type="text/template">
