hide language and players if empty

--- a/client/room.html
+++ b/client/room.html
@@ -313,8 +313,8 @@
           </div>
         </div>
         <div class="variant-name" data-field="variant" data-forceshow="true"></div>
-        <div class="language-info"><i class="material-icons">language</i><span data-field="language"></span></div>
-        <div class="player-number-info"><i class="material-icons">person</i><span data-field="players"></span></div>
+        <div class="language-info" data-showfor="language"><i class="material-icons">language</i><span data-field="language"></span></div>
+        <div class="player-number-info" data-showfor="players"><i class="material-icons">person</i><span data-field="players"></span></div>
         <button icon="play_arrow" class="hideForEdit">Play</button>
         <button icon="edit" class="onlyForEdit">Edit</button>
         <div class="variantEdit">
