hide buttons for next and previous state when editing

--- a/client/room.html
+++ b/client/room.html
@@ -345,7 +345,7 @@
           <div class="onlyForEdit"><i class="material-icons">auto_stories</i> Rules overview link: <span data-field="rules"></span></div>
         </div>
       </div>
-      <div id="prevState" class="roomState">
+      <div id="prevState" class="roomState hideForEdit">
         <img>
         <div class="details">
           <h3>Previous</h3>
@@ -353,7 +353,7 @@
         </div>
         <button class="prettyButton prev"><i class="material-icons">arrow_back</i></button>
       </div>
-      <div id="nextState" class="roomState">
+      <div id="nextState" class="roomState hideForEdit">
         <img>
         <div class="details">
           <h3>Next</h3>
