added richtext toolbar button to insert an image

--- a/client/room.html
+++ b/client/room.html
@@ -581,6 +581,8 @@
     <button icon="format_list_bulleted"   data-command="insertunorderedlist"></button>
     <button icon="format_indent_increase" data-command="indent"></button>
     <button icon="format_indent_decrease" data-command="outdent"></button>
+    <span class="divider"></span>
+    <button icon="add_photo_alternate"></button>
   </template>
 
   <script type="module"> //*** CONFIG ***//  //*** JS ***// </script>
