added richtext toolbar button to insert a video

--- a/client/room.html
+++ b/client/room.html
@@ -583,6 +583,7 @@
     <button icon="format_indent_decrease" data-command="outdent"></button>
     <span class="divider"></span>
     <button icon="add_photo_alternate"></button>
+    <button icon="movie"></button>
   </template>
 
   <script type="module"> //*** CONFIG ***//  //*** JS ***// </script>
