added a button for inserting icons into richtext; updated Material Icons font

--- a/client/room.html
+++ b/client/room.html
@@ -527,6 +527,13 @@
     </div>
 
     <div id="playerCursors"></div>
+
+    <div id="symbolPicker">
+      <input placeholder="Search" />
+      <div id="symbolList">
+        Loading...
+      </div>
+    </div>
   </div>
 
   <div id="jsonEditor">
@@ -584,6 +591,7 @@
     <span class="divider"></span>
     <button icon="add_photo_alternate"></button>
     <button icon="movie"></button>
+    <button icon="add_reaction"></button>
   </template>
 
   <script type="module"> //*** CONFIG ***//  //*** JS ***// </script>
