implemented adding a new variant from the room state

--- a/client/room.html
+++ b/client/room.html
@@ -277,6 +277,13 @@
       <button class="prettyButton gameMenu upload">Upload files</button>
     </div>
 
+    <div id="variantAddOverlay" class="overlay">
+      <h1>Add variant</h1>
+      <button icon="save">Save room state</button>
+      <button icon="upload">Upload files</button>
+      <button icon="link">Link to public library</button>
+    </div>
+
     <div id="stateDetailsOverlay" class="overlay" class="notEditing">
       <div class="buttons one">
         <button icon="download" class="hideForEdit">Download</button>
