removing broken library variant links; new button to link to library variants

--- a/client/room.html
+++ b/client/room.html
@@ -281,6 +281,7 @@
       <h1>Add variant</h1>
       <button icon="save">Save room state</button>
       <button icon="upload">Upload files</button>
+      <select></select>
       <button icon="link">Link to public library</button>
     </div>
 
