fixed empty boxes in the narrow game details view

--- a/client/room.html
+++ b/client/room.html
@@ -336,7 +336,7 @@
         <div class="variantsList"></div>
         <button icon="add" class="onlyForEdit">Add variant</button>
       </div>
-      <div id="similarDetails" data-showfor="similarImage|similarName|similarAwards|similarLink|similarVideo">
+      <div id="similarDetails" data-showfor="similarImage|similarName|similarAwards|bgg|rules">
         <div id="similarImage">
           <img data-field="similarImage" data-target="src">
           <div class="onlyForEdit">
