lazy-load JSZip when actually loading a file; also load it from the server and not jsdelivr

--- a/client/room.html
+++ b/client/room.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="i/branding/ios-icon.png">
   <link rel="manifest" href="i/branding/manifest.json">
   <link rel="mask-icon" href="i/branding/mask-icon.svg">
-  <script src="https://cdn.jsdelivr.net/combine/npm/vue@3.0.7/dist/vue.global.prod.js,npm/jszip@3.6.0/dist/jszip.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@3.0.7/dist/vue.global.prod.js"></script>
   <base target="_blank">
   <style> /*** CSS ***/ </style>
 </head>
