game files can now be drag-and-dropped into the browser window

--- a/client/room.html
+++ b/client/room.html
@@ -265,7 +265,7 @@
           </div>
         </template>
         <button icon="add" id="addState">Add game</button>
-        <p id="emptyLibrary">Your personal game library is currently empty.<br>Use the stars below to pin public library games or use the "Add game" button above.</p>
+        <p id="emptyLibrary">Your personal game library is currently empty.<br>Use the stars below to pin public library games, use the "Add game" button above or drag VTT files here.</p>
         <!--<button class="prettyButton gameMenu download">Download all</button>-->
       </div>
     </div>
