added a link icon to linked states

--- a/client/room.html
+++ b/client/room.html
@@ -259,6 +259,7 @@
         <template id="template-stateslist-entry" type="text/template">
           <img>
           <button class="prettyButton star">★</button>
+          <i class="material-icons">link</i>
           <div class="details">
             <h3>Name</h3>
             <h4>Similar Name</h4>
@@ -301,6 +302,7 @@
         <div id="mainImage">
           <img data-field="image" data-target="src">
           <button class="prettyButton star">★</button>
+          <i class="material-icons">link</i>
           <div class="onlyForEdit">
             <button icon="image" data-field="image" data-target="value" data-forceshow="true">Change</button>
           </div>
