public library games can now be added from the UI (if allowPublicLibraryEdits is enabled)

--- a/client/room.html
+++ b/client/room.html
@@ -297,6 +297,7 @@
         <button icon="edit" class="hideForEdit">Edit</button>
         <button icon="save" class="onlyForEdit green">Save</button>
         <button icon="delete" class="hideForEdit red">Delete</button>
+        <button icon="upload" class="hidden"></button>
       </div>
       <div id="mainDetails">
         <div id="mainImage">
