added share link button

--- a/client/room.html
+++ b/client/room.html
@@ -295,6 +295,7 @@
         <button icon="menu" class="hideForEdit"></button>
         <div class="hidden hideForEdit">
           <button icon="download">Download</button>
+          <button icon="link">Share link</button>
           <button icon="edit_off" disabled>Read-only</button>
           <button icon="edit">Edit</button>
           <button icon="delete" class="red">Delete</button>
