--- a/client/room.html
+++ b/client/room.html
@@ -302,6 +302,7 @@
           <button icon="upload" class="hidden">Add to public library</button>
         </div>
         <button icon="save" class="onlyForEdit green">Save</button>
+        <button icon="upload" class="onlyForEdit" disabled>Uploading</button>
       </div>
       <div id="mainDetails">
         <div id="mainImage">
