keep track of currently active game and highlight it

--- a/client/room.html
+++ b/client/room.html
@@ -259,7 +259,8 @@
         <template id="template-stateslist-entry" type="text/template">
           <img>
           <button class="prettyButton star">★</button>
-          <i class="material-icons">link</i>
+          <i class="material-icons linked">link</i>
+          <i class="material-icons active">play_arrow</i>
           <div class="details">
             <h3>Name</h3>
             <h4>Similar Name</h4>
