show hint about filters when all games are hidden

--- a/client/room.html
+++ b/client/room.html
@@ -270,6 +270,7 @@
           <button icon="add" id="addState">Add game</button>
         </div>
         <p id="emptyLibrary">Your personal game library is currently empty.<br>Use the stars below to pin public library games, use the "Add game" button above or drag VTT files here.</p>
+        <p id="emptyLibraryByFilter">No games displayed.<br>Adjust the filters above to show them.</p>
         <!--<button class="prettyButton gameMenu download">Download all</button>-->
       </div>
     </div>
