added Unlink button to linked states

--- a/client/room.html
+++ b/client/room.html
@@ -308,6 +308,7 @@
         <div class="hidden hideForEdit">
           <button icon="download">Download</button>
           <button icon="link">Share link</button>
+          <button icon="link_off">Unlink</button>
           <button icon="edit_off" disabled>Read-only</button>
           <button icon="edit">Edit</button>
           <button icon="delete" class="red">Delete</button>
