--- a/client/room.html
+++ b/client/room.html
@@ -277,9 +277,9 @@
 
     <div id="stateAddOverlay" class="overlay">
       <h1>Add game</h1>
-      <button class="prettyButton gameMenu create">Save room state</button>
-      <button class="prettyButton gameMenu link">Enter link</button>
-      <button class="prettyButton gameMenu upload">Upload files</button>
+      <button icon="save">Save room state</button>
+      <button icon="link">Enter link</button>
+      <button icon="upload">Upload files</button>
     </div>
 
     <div id="stateSaveOverlay" class="overlay">
