Change debug output to be a button.

--- a/client/room.html
+++ b/client/room.html
@@ -433,8 +433,11 @@
     </div>
     <div id="jeCommands"></div>
     <div id="jeLogWrapper">
-      <div id="jeLog"><h1>No debug information yet.</h1></div>
-      <h1>Show Routine Debug Output</h1>
+      <button id="jeShowDebugOutput">Show Routine Debug Output</button>
+      <div id="jeLog">
+        <button id="jeHideDebugOutput">X</button>
+        <h1>No debug information yet.</h1>
+      </div>
     </div>
     <div id="traceUI"><input type="range" id="traceInput"></div>
   </div>
