--- a/client/room.html
+++ b/client/room.html
@@ -278,8 +278,7 @@
       <h1>Add game</h1>
       <button icon="close"></button>
       <div>
-        <div>
-          <i class="material-icons">upload</i>
+        <div icon="upload">
           <p>Upload VTT or PCIO files you downloaded from the web.</p>
           <p>You can find compatible game files on <a href="https://boardgamegeek.com/geeklist/272690/games-implemented-playingcardsio">a boardgamegeek.com geeklist</a>,
           <a href="https://www.reddit.com/r/PlayingCardsIO/">the PlayingCardsIO subreddit</a>,
@@ -288,14 +287,12 @@
           <p>Please note that PCIO files might not be 100% compatible. Please <a href="https://github.com/ArnoldSmith86/virtualtabletop/issues/new">open an issue on GitHub</a> if a file is unplayable.</p>
           <button icon="upload">Upload files</button>
         </div>
-        <div>
-          <i class="material-icons">link</i>
+        <div icon="link">
           <p>If you have a direct link to a VTT or PCIO file (for example by sharing a link from virtualtabletop.io), you can add the game using the link and you will always play the latest version.</p>
           <input placeholder="URL">
           <button icon="link">Add link</button>
         </div>
-        <div>
-          <i class="material-icons">save</i>
+        <div icon="save">
           <p>Use the current state of this room as a new game.</p>
           <p>This is usually used when using Edit Mode to create a new game from scratch.</p>
           <button icon="save">Save room state</button>
