--- a/client/room.html
+++ b/client/room.html
@@ -302,10 +302,17 @@
 
     <div id="stateSaveOverlay" class="overlay">
       <h1>Save game</h1>
-      <p>This creates a save state of the currently active game so that you can start a different game and come back to this one later.</p>
-      <p>Active players: <input></p>
-      <button icon="save">Save game</button>
-      <button icon="undo">Cancel</button>
+      <button icon="close"></button>
+      <div>
+        <div icon="save">
+          <p>This creates a save state of the currently active game so that you can start a different game and come back to this one later.</p>
+          <p>Active players: <input></p>
+          <div class="buttons">
+            <button icon="undo">Cancel</button>
+            <button icon="save">Save game</button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div id="variantAddOverlay" class="overlay">
