--- a/client/room.html
+++ b/client/room.html
@@ -461,13 +461,18 @@
 
     <div id="shareLinkOverlay" class="overlay">
       <h1>Share link</h1>
-      <p>You can share this link with others so they can add your game to their library.</p>
-      <p>The link does not expire.</p>
-      <p>Keep in mind that you change their game whenever you change this game in your library.</p>
-      <p>In-progress save games are not included and will stay private to your room.</p>
-      <p>There is no way for people with this link to find your room.</p>
-      <input id="sharedLink" value="Loading link..."/>
-      <button id="shareOK">OK</button>
+      <button icon="close"></button>
+      <div>
+        <div icon="link">
+          <p>You can share this link with others so they can add your game to their library.</p>
+          <p>The link does not expire.</p>
+          <p>Keep in mind that you change their game whenever you change this game in your library.</p>
+          <p>Saved in-progress games are not included and will stay private to your room.</p>
+          <p>There is no way for people with this link to find your room.</p>
+          <input id="sharedLink" value="Loading link..."/>
+          <button icon="check">OK</button>
+        </div>
+      </div>
     </div>
 
     <div id="symbolPickerOverlay" class="overlay">
