changed background icons to be one of the button icons

--- a/client/room.html
+++ b/client/room.html
@@ -476,7 +476,7 @@
       <h1>Share link</h1>
       <button icon="close"></button>
       <div>
-        <div icon="link">
+        <div icon="check">
           <p>You can share this link with others so they can add your game to their library.</p>
           <p>The link does not expire.</p>
           <p>Keep in mind that you change their game whenever you change this game in your library.</p>
