changed button on "Share link" overlay to "Copy to clipboard"

--- a/client/room.html
+++ b/client/room.html
@@ -476,14 +476,14 @@
       <h1>Share link</h1>
       <button icon="close"></button>
       <div>
-        <div icon="check">
+        <div icon="link">
           <p>You can share this link with others so they can add your game to their library.</p>
           <p>The link does not expire.</p>
           <p>Keep in mind that you change their game whenever you change this game in your library.</p>
           <p>Saved in-progress games are not included and will stay private to your room.</p>
           <p>There is no way for people with this link to find your room.</p>
           <input id="sharedLink" value="Loading link..."/>
-          <button icon="check">OK</button>
+          <button icon="link">Copy to clipboard</button>
         </div>
       </div>
     </div>
