gave the filter search box a name to hopefully fix that the browser fills it with stuff

--- a/client/room.html
+++ b/client/room.html
@@ -218,7 +218,7 @@
       <div id="stateFilters">
         <span id="filterByTextWrapper">
           <i class="material-icons">search</i>
-          <input id="filterByText" placeholder="Search" />
+          <input id="filterByText" name="filterByText" placeholder="Search" />
           <i class="material-icons" id="clearSearch">close</i>
         </span>
         <span id="filterByTypeWrapper">
