games can now be sorted by name or year

--- a/client/room.html
+++ b/client/room.html
@@ -250,6 +250,10 @@
           <i class="material-icons">groups</i>
           <select id="filterByMode"></select>
         </span>
+        <span id="librarySortWrapper">
+          <i class="material-icons">sort_by_alpha</i>
+          <select id="librarySort"><option value="name">by Name</option><option value="year">by Year</option></select>
+        </span>
       </div>
       <div id="statesList">
         <template id="template-stateslist-category" type="text/template">
