--- a/client/room.html
+++ b/client/room.html
@@ -252,7 +252,7 @@
         </span>
         <span id="librarySortWrapper">
           <i class="material-icons">sort_by_alpha</i>
-          <select id="librarySort"><option value="name">by Name</option><option value="similarName">by Similar Name</option><option value="year">by Year</option></select>
+          <select id="librarySort"><option value="name">by Name</option><option value="similarName">by Similar Name</option><option value="stars">by Stars</option><option value="year">by Year</option></select>
         </span>
       </div>
       <div id="statesList">
