--- a/client/room.html
+++ b/client/room.html
@@ -363,7 +363,7 @@
         <div id="mainImage">
           <img data-field="image" data-target="src">
           <button class="prettyButton star">★</button>
-          <span data-field="stars">0</span>
+          <span data-field="stars" class="uneditable">0</span>
           <i class="material-icons">link</i>
           <div class="onlyForEdit">
             <button icon="image" data-field="image" data-target="value" data-forceshow="true">Change</button>
