--- a/client/room.html
+++ b/client/room.html
@@ -263,7 +263,7 @@
         </template>
         <template id="template-stateslist-entry" type="text/template">
           <img>
-          <button class="prettyButton star">★</button>
+          <button icon="star_rate" class="star"></button>
           <i class="material-icons linked">link</i>
           <div class="details">
             <h3>Name</h3>
@@ -362,7 +362,7 @@
       <div id="mainDetails">
         <div id="mainImage">
           <img data-field="image" data-target="src">
-          <button class="prettyButton star">★</button>
+          <button icon="star_rate" class="star"></button>
           <span data-field="stars" class="uneditable">0</span>
           <i class="material-icons">link</i>
           <div class="onlyForEdit">
