when saving the room state, do not edit it directly if editing another state

--- a/client/room.html
+++ b/client/room.html
@@ -340,7 +340,7 @@
       </div>
     </div>
 
-    <div id="stateDetailsOverlay" class="overlay" class="notEditing">
+    <div id="stateDetailsOverlay" class="overlay notEditing">
       <div class="buttons one">
         <button icon="close" class="hideForEdit" id="closeDetails"></button>
         <button icon="close" class="onlyForEdit red" id="discardDetails">Discard</button>
