--- a/client/room.html
+++ b/client/room.html
@@ -254,7 +254,7 @@
           <i class="material-icons">sort_by_alpha</i>
           <select id="librarySort"><option value="name">by Name</option><option value="similarName">by Similar Name</option><option value="stars">by Stars</option><option value="timePlayed">by Popularity</option><option value="year">by Year</option></select>
         </span>
-        <div id="filterOverflow"></div>
+        <div id="filterOverflow"><button icon="more_horiz"></button><div></div></div>
       </div>
       <div id="statesList">
         <template id="template-stateslist-category" type="text/template">
