abbreviate minutes in filter dropdown

--- a/client/room.html
+++ b/client/room.html
@@ -239,7 +239,7 @@
         <span id="filterByDurationWrapper" data-priority="6">
           <i class="material-icons">schedule</i>
           <select id="filterByDuration"><option>Any</option>
-            <option value="0-30">&lt;= 30 minutes</option><option value="31-60">30-60 minutes</option><option value="61-999">&gt; 60 minutes</option>
+            <option value="0-30">&lt;= 30 min</option><option value="31-60">30-60 min</option><option value="61-999">&gt; 60 min</option>
           </select>
         </span>
         <span id="filterByLanguageWrapper" data-priority="5">
