moved close button of the share link overlay next to the title

--- a/client/room.html
+++ b/client/room.html
@@ -480,8 +480,10 @@
     </div>
 
     <div id="shareLinkOverlay" class="overlay">
-      <h1>Share link</h1>
-      <button icon="close"></button>
+      <div class="title">
+        <h1>Share link</h1>
+        <button icon="close"></button>
+      </div>
       <div>
         <div icon="link">
           <p>You can share this link with others so they can add your game to their library.</p>
