moved close button of the symbol picker overlay next to the title

--- a/client/room.html
+++ b/client/room.html
@@ -480,7 +480,7 @@
     </div>
 
     <div id="shareLinkOverlay" class="overlay">
-      <div class="title">
+      <div class="titleWithCloseButton">
         <h1>Share link</h1>
         <button icon="close"></button>
       </div>
@@ -498,8 +498,10 @@
     </div>
 
     <div id="symbolPickerOverlay" class="overlay">
-      <h1>Pick icon</h1>
-      <button icon="close"></button>
+      <div class="titleWithCloseButton">
+        <h1>Pick icon</h1>
+        <button icon="close"></button>
+      </div>
       <div>
         <div icon="add_reaction">
           <input placeholder="Search" />
