moved close button of the confirmation overlay next to the title

--- a/client/room.html
+++ b/client/room.html
@@ -466,8 +466,10 @@
     </div>
 
     <div id="confirmOverlay" class="overlay">
-      <h1 data-field="title"></h1>
-      <button icon="close"></button>
+      <div class="titleWithCloseButton">
+        <h1 data-field="title"></h1>
+        <button icon="close"></button>
+      </div>
       <div>
         <div icon="warning">
           <p data-field="text"></p>
