moved close button of the add state/variant overlays next to the title

--- a/client/room.html
+++ b/client/room.html
@@ -280,8 +280,10 @@
     </div>
 
     <div id="stateAddOverlay" class="overlay">
-      <h1>Add game</h1>
-      <button icon="close"></button>
+      <div class="titleWithCloseButton">
+        <h1>Add game</h1>
+        <button icon="close"></button>
+      </div>
       <div>
         <div icon="upload">
           <p>Upload VTT or PCIO files you downloaded from the web.</p>
@@ -321,8 +323,10 @@
     </div>
 
     <div id="variantAddOverlay" class="overlay">
-      <h1>Add variant</h1>
-      <button icon="close"></button>
+      <div class="titleWithCloseButton">
+        <h1>Add variant</h1>
+        <button icon="close"></button>
+      </div>
       <div>
         <div icon="save">
           <p>The most common use-case for adding new variants to a game is when you are actually editing it.</p>
