moved close button of the save game overlay next to the title

--- a/client/room.html
+++ b/client/room.html
@@ -308,8 +308,10 @@
     </div>
 
     <div id="stateSaveOverlay" class="overlay">
-      <h1>Save game</h1>
-      <button icon="close"></button>
+      <div class="titleWithCloseButton">
+        <h1>Save game</h1>
+        <button icon="close"></button>
+      </div>
       <div>
         <div icon="save">
           <p>This creates a save state of the currently active game so that you can start a different game and come back to this one later.</p>
