added game categories

--- a/client/room.html
+++ b/client/room.html
@@ -407,6 +407,7 @@
       <div id="variantsList">
         <div class="variantsList"></div>
         <button icon="add" class="onlyForEdit">Add variant</button>
+        <textarea data-field="categories" data-target="value"></textarea>
       </div>
       <div id="similarDetails" data-showfor="similarImage|similarName|similarAwards|bgg|rules">
         <div id="similarImage">
