added a new richtext toolbar button for a floating image

--- a/client/room.html
+++ b/client/room.html
@@ -648,6 +648,7 @@
     <button icon="format_indent_decrease" data-command="outdent"></button>
     <span class="divider"></span>
     <button icon="add_photo_alternate"></button>
+    <button icon="art_track"></button>
     <button icon="movie"></button>
     <button icon="add_reaction"></button>
   </template>
