changed logo to be an image

--- a/client/room.html
+++ b/client/room.html
@@ -19,6 +19,7 @@
 <body>
 
   <div id="toolbar">
+    <img src="i/branding/logo.svg">
     <div class="divider"></div>
     <button id="statesButton" data-overlay="statesOverlay" class="toolbarButton toolbarTab" ><span class="tooltip">Game Shelf</span></button>
     <button id="activeGameButton" class="active toolbarButton toolbarTab" ><span class="tooltip">Active Game</span></button>
