fixed broken image when editing state details

--- a/client/room.html
+++ b/client/room.html
@@ -369,7 +369,7 @@
       </div>
       <div id="mainDetails">
         <div id="mainImage">
-          <img data-field="image" data-target="src">
+          <img data-field="image" data-target="src" class="uneditable">
           <button icon="star_rate" class="star"></button>
           <span data-field="stars" class="uneditable">0</span>
           <i class="material-icons">link</i>
@@ -411,7 +411,7 @@
       </div>
       <div id="similarDetails" data-showfor="similarImage|similarName|similarAwards|bgg|rules">
         <div id="similarImage">
-          <img data-field="similarImage" data-target="src">
+          <img data-field="similarImage" data-target="src" class="uneditable">
           <div class="onlyForEdit">
             <button icon="image" data-field="similarImage" data-target="value" data-forceshow="true">Change</button>
           </div>
