--- a/client/room.html
+++ b/client/room.html
@@ -316,7 +316,7 @@
       <div>
         <div icon="save">
           <p>This creates a save state of the currently active game so that you can start a different game and come back to this one later.</p>
-          <p>Active players: <input></p>
+          <p>Notes: <input></p>
           <div class="buttons">
             <button icon="undo">Cancel</button>
             <button icon="save">Save game</button>
