fixed "<empty>" on variant image edit button

--- a/client/room.html
+++ b/client/room.html
@@ -390,7 +390,7 @@
         <div class="variant-image">
           <img data-target="src">
           <div class="variantEdit">
-            <button icon="image" data-field="variantImage" data-target="value" data-forceshow="true"></button>
+            <button icon="image" data-field="variantImage" data-target="value" data-forceshow="true" class="uneditable"></button>
           </div>
         </div>
         <div class="variant-name" data-field="variant" data-forceshow="true"></div>
