added a lastUpdate to states and use it as a sort option

--- a/client/room.html
+++ b/client/room.html
@@ -253,7 +253,7 @@
         </span>
         <span id="librarySortWrapper" data-priority="3">
           <i class="material-icons">sort_by_alpha</i>
-          <select id="librarySort"><option value="name">by Name</option><option value="similarName">by Similar Name</option><option value="stars">by Stars</option><option value="timePlayed">by Popularity</option><option value="year">by Year</option></select>
+          <select id="librarySort"><option value="name">by Name</option><option value="similarName">by Similar Name</option><option value="stars">by Stars</option><option value="timePlayed">by Popularity</option><option value="lastUpdate">by Last Updated</option><option value="year">by Year</option></select>
         </span>
         <div id="filterOverflow"><button icon="more_horiz"></button><div></div></div>
       </div>
