added an "Update loaded game" button

--- a/client/room.html
+++ b/client/room.html
@@ -272,6 +272,7 @@
             <h4>Similar Name</h4>
           </div>
         </template>
+        <button icon="fast_forward" id="updateSaveState">Update loaded game</button>
         <button icon="save" id="saveState">Save active game</button>
         <button icon="add" id="addState">Add game</button>
         <p id="emptyLibrary">Your personal game library is currently empty.<br>Use the stars below to pin public library games, use the "Add game" button above or drag VTT files here.</p>
