--- a/client/room.html
+++ b/client/room.html
@@ -421,9 +421,9 @@
           <h1 data-showfor="similarName">Similar to: <span data-field="similarName"></span><span data-showfor="year"> (<span data-field="year"></span>)</span></h1>
           <div data-showfor="similarAwards" class="hideForEdit"><i class="material-icons">emoji_events</i> <span data-field="similarAwards"></span></div>
           <div class="onlyForEdit"><i class="material-icons">emoji_events</i> Awards: <span data-field="similarAwards"></span></div>
-          <div data-showfor="bgg" class="hideForEdit"><i class="material-icons">info</i> <a data-field="bgg" data-target="href">Game details on <i class="material-icons intext">launch</i> <span id="similarDetailsDomain"></span></a></div>
+          <div data-showfor="bgg" class="hideForEdit"><i class="material-icons">info</i> <a data-field="bgg" data-target="href">Game details on <nobr><i class="material-icons intext">launch</i> <span id="similarDetailsDomain"></span></nobr></a></div>
           <div class="onlyForEdit"><i class="material-icons">info</i> Game details link: <span data-field="bgg"></span></div>
-          <div data-showfor="rules" class="hideForEdit"><i class="material-icons">auto_stories</i> <a data-field="rules" data-target="href">Rules overview on <i class="material-icons intext">launch</i> <span id="similarRulesDomain"></span></a></div>
+          <div data-showfor="rules" class="hideForEdit"><i class="material-icons">auto_stories</i> <a data-field="rules" data-target="href">Rules overview on <nobr><i class="material-icons intext">launch</i> <span id="similarRulesDomain"></span></nobr></a></div>
           <div class="onlyForEdit"><i class="material-icons">auto_stories</i> Rules overview link: <span data-field="rules"></span></div>
         </div>
       </div>
