renamed "Discard" to "Discard changes"

--- a/client/room.html
+++ b/client/room.html
@@ -352,7 +352,7 @@
     <div id="stateDetailsOverlay" class="overlay notEditing">
       <div class="buttons one">
         <button icon="close" class="hideForEdit" id="closeDetails"></button>
-        <button icon="close" class="onlyForEdit red" id="discardDetails">Discard</button>
+        <button icon="close" class="onlyForEdit red" id="discardDetails">Discard changes</button>
       </div>
       <div class="buttons two">
         <button icon="menu" class="hideForEdit"></button>
