--- a/client/room.html
+++ b/client/room.html
@@ -175,6 +175,7 @@
       </div>
       <div class="category">
         <h2>Decorative</h2>
+        <button class="ui-button" id="addScoreboard">Add Scoreboard</button>
       </div>
       <div class="category">
         <h2>Custom</h2>
